add: gitignoreにvscodeのファイルなどを更新。

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-*.o
-*.code-workspace
-.vscode/
+tmp/
+doc/
 out/
+
+*.log
+
+# vscode
+.history/
+.vscode/
+*.code-workspace
+
+# node.js
+node_modules/
+
